<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolBarHeaderToDo"
        android:text="@string/title_notification_settings"
        style="@style/ToolbarText"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/settings_popup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon_group_main"
        android:orientation="vertical"
        android:visibility="gone">

    <TextView
        android:id="@+id/title_usage_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center"
        style="@style/UsageOffText"
        android:text="@string/usage_settings_off" />

    <TextView
        android:id="@+id/text_usage_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/noti_settings_off"
        android:textSize="@dimen/large_font_size" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="491dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="68dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/colorGreyLight">

                <CheckBox
                    android:id="@+id/notification_checkbox_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_small">
                <TextView
                    android:id="@+id/notification_frequency_1"
                    style="@style/NotificationButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_frequency_1" />
                    <TextView
                        android:id="@+id/notification_description_1"
                        style="@style/NotificationDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_description_1" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/SettingsDivider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/colorGreyLight">

                <CheckBox
                    android:id="@+id/notification_checkbox_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_large" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_small">
                <TextView
                    android:id="@+id/notification_frequency_2"
                    style="@style/NotificationButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_frequency_2" />
                    <TextView
                        android:id="@+id/notification_description_2"
                        style="@style/NotificationDescription"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/notification_description_2" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/SettingsDivider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/colorGreyLight">

                <CheckBox
                    android:id="@+id/notification_checkbox_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_large" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_small">
                <TextView
                    android:id="@+id/notification_frequency_3"
                    style="@style/NotificationButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_frequency_3" />
                    <TextView
                        android:id="@+id/notification_description_3"
                        style="@style/NotificationDescription"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/notification_description_3" />
            </LinearLayout>
            </LinearLayout>

            <View style="@style/SettingsDivider"/>



        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>