<?xml version="1.0" encoding="utf-8"?>
<!--Layout of the AddToDoFragment-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Toolbar of the fragment-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Toolbar title of the fragment-->
    <TextView
        style="@style/ToolbarText"
        android:text="@string/title_add_to_do"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--A scrollview which contains the other elements in the add a to do form-->
    <ScrollView
        android:id="@+id/addToDo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:background="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <!--Each input field is laid out in a vertical LinearLayout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--To Do Name input field-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addToDoNameLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/addToDoName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_to_do_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="@color/colorFontStyle"
                    android:textColorLink="@color/colorFontStyle" />
            </android.support.design.widget.TextInputLayout>

            <!--To Do Note input field-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addToDoNoteLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addToDoNameLayout">

                <EditText
                    android:id="@+id/addToDoNote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_to_do_note"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textColorHint="@color/colorFontStyle" />
            </android.support.design.widget.TextInputLayout>

            <!--To Do Due Date input field-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addToDoDueDateLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_small"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addToDoNoteLayout">

                <EditText
                    android:id="@+id/addToDoDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/add_to_do_due_date"
                    android:textColorHint="@color/colorFontStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.design.widget.TextInputLayout>

            <!--To Do Alarm input field-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addToDoDueDateLayout">

                <EditText
                    android:id="@+id/addToDoAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/add_to_do_alarm_date"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textColorHint="@color/colorFontStyle" />
            </android.support.design.widget.TextInputLayout>

            <!--Save To Do Button-->
            <Button
                android:id="@+id/button_save_new_to_do"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:padding="@dimen/margin_large"
                android:paddingLeft="150dp"
                android:text="@string/save_new_to_do"
                android:textAllCaps="false"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addToDoAlarm" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>