<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolBarHeaderToDo"
        android:text="@string/title_view_to_do"
        style="@style/ToolbarText"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/addToDoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:background="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toDoNameLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/toDoName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_to_do_name"
                    android:textColorHint="@color/colorFontStyle"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorLink="@color/colorFontStyle" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toDoNoteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addToDoNameLayout">

                <EditText
                    android:id="@+id/toDoNote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_to_do_note"
                    android:textColorHint="@color/colorFontStyle"
                    android:inputType="text"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toDoDueDateLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addToDoNoteLayout"
                android:focusable="false">

                <EditText
                    android:id="@+id/toDoDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_to_do_due_date"
                    android:textColorHint="@color/colorFontStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:focusable="false"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/toDoDueAlarmLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toDoDueDateLayout"
                android:focusable="false">

                <EditText
                    android:id="@+id/toDoAlarmDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_to_do_alarm_date"
                    android:textColorHint="@color/colorFontStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:focusable="false"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/to_do_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Completed?"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_large"
                android:textColor="@color/colorFontStyle"
                />

            <Button
                android:id="@+id/button_edit_to_do"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:padding="@dimen/margin_large"
                android:paddingLeft="150dp"
                android:text="@string/view_to_do_edit_button"
                android:textAllCaps="false"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button_save_new_to_do"
                />

            <Button
                android:id="@+id/button_delete_to_do"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:padding="@dimen/margin_large"
                android:paddingLeft="150dp"
                android:text="@string/delete_to_do"
                android:backgroundTint="@color/colorDelete"
                android:textAllCaps="false"
                android:textSize="@dimen/large_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_edit_to_do"
                />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>